fix font alignment and rendering

--- a/trunk/RipThatPic/Themes/FontPicker.css
+++ b/trunk/RipThatPic/Themes/FontPicker.css
@@ -3,6 +3,7 @@
     
     
     margin:auto;
+    margin-left:-5px;
     /*position:absolute;*/
     /*padding:7px 5px 7px 5px;*/
 }
@@ -10,7 +11,7 @@
 
         cursor:pointer;
         vertical-align:central;
-        padding:5px 15px 5px 15px;
+        padding:5px 15px 5px 0;
         font-size:14px;
     }
     /*.font-picker .item:hover {
